# MakoMidi

Mako D1/MakoM1-MidiControl/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Mako R1/MakoR1-MidiControl/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
MakoM1-MidiControl/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
